# superdad

./: .flake8  .flaskenv  .gitignore  gunicorn_cfg.py  requirements.txt  run.py  setup.cfg  setup.py  test_apscheduler.py
superdad/: __init__.py  exc.py  handler.py  model.py  schema.py  settings.py  web.py
superdad.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
superdad/ctx/: __init__.py  shared_ctx.py
superdad/dashboard/: __init__.py  plates.py  router.py
superdad/dashboard/templates/: dashboard.html  markets.html
superdad/gateway/: __init__.py  base.py  futu.py
superdad/i18n/: __init__.py  chs.py
superdad/kline/: __init__.py  router.py
superdad/limiter/: __init__.py  bucket.py
superdad/socketio/: __init__.py  io.py
superdad/static/js/: app.js  fav.js
superdad/tasks/: __init__.py  analyzer.py  depthy.py  kliner.py  pricy.py  trendy.py
superdad/templates/: base.html  dashboard.html  kline.html  markets.html  plates.html
superdad/utils/: sql_compat.py  strs.py
