[metadata]
name = superdad
version = attr: superdad.__version_str__
# description = My package description
description = attr: superdad.__project_name__
long_description = file: README.md
long_description_content_type = text/markdown
; keywords = one, two
; license = BSD 3-Clause License
classifiers =
	Operating System :: OS Independent
	Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
# TODO:
packages = find:

; [entry_points]
; console_scripts =
;     "superdad = superdad.scripts.superdad:superdad"


install_requires = marshmallow
				   flask
				   futu-api
				   click
				   ;   importlib;
				   python_version >= "3.7"

; [options.extras_require]
; pdf = ReportLab>=1.2; RXP
; rest = docutils>=0.3; pack ==1.1, ==1.3

test_requests =
	pytest

[options.packages.find]
exclude =
	docs

; [options.data_files]
; /etc/my_package =
;     site.d/00_default.conf
;     host.d/00_default.conf
; data = data/img/logo.png, data/svg/icon.svg


[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = superdad
